crates/ruff_python_parser/tests/snapshots/valid_syntax@tstring_format_spec_terminator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/tstring_format_spec_terminator.py
---
## AST

```
Module(
    ModModule {
        range: 0..87,
        body: [
            Expr(
                StmtExpr {
                    range: 44..63,
                    value: TString(
                        ExprTString {
                            range: 44..63,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 44..63,
                                            elements: [
                                                Literal(
                                                    TStringLiteralElement {
                                                        range: 46..52,
                                                        value: "hello ",
                                                    },
                                                ),
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 52..56,
                                                        interpolation: Name(
                                                            ExprName {
                                                                range: 53..54,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: Some(
                                                            TStringFormatSpec {
                                                                range: 55..55,
                                                                elements: [],
                                                            },
                                                        ),
                                                    },
                                                ),
                                                Literal(
                                                    TStringLiteralElement {
                                                        range: 56..62,
                                                        value: " world",
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 64..86,
                    value: TString(
                        ExprTString {
                            range: 64..86,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 64..86,
                                            elements: [
                                                Literal(
                                                    TStringLiteralElement {
                                                        range: 66..72,
                                                        value: "hello ",
                                                    },
                                                ),
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 72..79,
                                                        interpolation: Name(
                                                            ExprName {
                                                                range: 73..74,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: Some(
                                                            TStringFormatSpec {
                                                                range: 75..78,
                                                                elements: [
                                                                    Literal(
                                                                        TStringLiteralElement {
                                                                            range: 75..78,
                                                                            value: ".3f",
                                                                        },
                                                                    ),
                                                                ],
                                                            },
                                                        ),
                                                    },
                                                ),
                                                Literal(
                                                    TStringLiteralElement {
                                                        range: 79..85,
                                                        value: " world",
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
