crates/ruff_python_parser/tests/snapshots/valid_syntax@tstring_py314.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/tstring_py314.py
---
## AST

```
Module(
    ModModule {
        range: 0..56,
        body: [
            Expr(
                StmtExpr {
                    range: 46..55,
                    value: TString(
                        ExprTString {
                            range: 46..55,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 46..55,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 48..54,
                                                        interpolation: Name(
                                                            ExprName {
                                                                range: 49..53,
                                                                id: Name("name"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Single,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
